Fix gnome shell do not disturb indicator icon on clock button that is not visible in active state

--- a/Cloudy-Dark-Blue/gnome-shell/gnome-shell.css
+++ b/Cloudy-Dark-Blue/gnome-shell/gnome-shell.css
@@ -770,6 +770,9 @@ StScrollBar {
       box-shadow: none;
       border: none;
       border-color: transparent; }
+  #panel .panel-button.clock-display:active > * > *:last-child, #panel .panel-button.clock-display:checked > * > *:last-child {
+    color: #ffffff;
+    background-color: #2B3143; }
   #panel #panelActivities.panel-button {
     -natural-hpadding: 12px; }
   #panel .panel-status-indicators-box,
@@ -780,7 +783,7 @@ StScrollBar {
   #panel .screencast-indicator {
     color: #FC4138; }
   #panel .clock-display > * > *:last-child {
-    color: #2B3143;
+    color: rgba(255, 255, 255, 0.78);
     margin-left: .3em; }
   #panel .popup-menu-arrow {
     width: 0; }
